# bpp-webhook

./: .gitignore  Cargo.toml  README.md
app/logs/: bap-adapter.log.2025-06-12
config/: local.yaml  prod.yaml
src/: config.rs  main.rs
src/http/: http_server.rs
src/http/routes/: routes.rs
src/models/: webhook.rs
src/services/: webhook.rs
src/utils/: http_client.rs  logging.rs  mod.rs
src/utils/mock_responses/: mod.rs
src/workers/: processor.rs
